--- a/index.html
+++ b/index.html
@@ -1,60 +1,1 @@
-<!DOCTYPE html>
-<html lang="en" class="loading">
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<meta name="google" content="notranslate" />
-<link rel="icon" href="favicon.png?0" />
-<title> Mirror </title>
-<meta name="author" content="LoeiFy">
-<link rel="stylesheet" href="dist/mirror.css" />
-<script>
-
-// Define
-var config = {
-    user:       'LoeiFy',                                       // GitHub Username
-    repo:       'Recordum',                                     // GitHub Repo
-    token:      'da3fb4003c268a958949'+'6b36b39b5d43a62831b3',  // GitHub access_token
-    info:       'Lorem ipsum dolor sit amet',                   // About Yourself
-    per_page:   7,                                              // Per Page Posts Number
-    behance:    '',                                             // Behance URL
-    dribbble:   '',                                             // Dribbble URL
-    instagram:  ''                                              // Instagram URL
-}
-
-</script>
-<script src="dist/libs.js"></script>
-<script src="dist/mirror.js"></script>
-</head>
-
-<body>
-
-<div id="switch"><div class="transition">
-
-<div class="dib" id="main">
-
-    <header id="user"></header>
-
-    <section id="posts"></section>
-
-    <button id="next">More Posts</button>
-
-</div><!--
-
---><div class="dib">
-
-    <article id="post"></article>
-
-</div>
-
-</div></div>
-
-<footer>
-    <a href="https://github.com/LoeiFy/Mirror" target="_blank">Mirror</a> . 
-    Powered with <span>&hearts;</span> by 
-    <a href="https://github.com" target="_blank">GitHub</a> 
-</footer>
-
-</body>
-
-</html>
+<!DOCTYPE html><html lang="en" class="loading"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1,user-scalable=no"><meta name="google" content="notranslate"><link rel="icon" href="favicon.png"><title>Mirror</title><style>html.loading{height:100%;text-align:center}html.loading body{height:100%}html.loading body:before{content:'';width:30px;height:30px;-webkit-border-radius:30px;border-radius:30px;-webkit-animation:loading 1.5s linear forwards infinite;animation:loading 1.5s linear forwards infinite;display:inline-block;border-top:4px solid #0089fa;border-right:4px solid #ff002b;border-bottom:4px solid #ffa900;border-left:4px solid #00a753;vertical-align:middle}html.loading body:after{content:'';display:inline-block;height:100%;vertical-align:middle}html.loading .container{display:none}@keyframes loading{100%{transform:rotate(360deg)}}@-webkit-keyframes loading{100%{-webkit-transform:rotate(360deg)}}</style><script>var config = {"title":"Mirror","user":"LoeiFy","repo":"Recordum","per_page":2,"token":"5#c21bffc137f44faf7e9c4a84da827f7cc2cfeaa"}</script><script type="text/javascript" src="build.296b478201fc728c3414.js"></script></head><body><div class="container"><div class="left"><div id="user"></div><div id="posts"></div><button class="button" id="next">More Posts</button><div id="footer"><a href="https://github.com/LoeiFy/Mirror" target="_blank">Mirror</a> . Powered with <span>♥</span> by GitHub</div></div><div class="right"><div id="post"></div></div></div></body></html>
