--- a/src/index.html
+++ b/src/index.html
@@ -1,110 +1,112 @@
 <!DOCTYPE html>
-<html lang="en" class="loading">
-<head>
-<meta charset="UTF-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge" >
-<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
-<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title> Loading... </title>
-<script>
-/*
-** if organization repository, set 'organization' to true
-** blog config here
-** token should be separated by '#'
-** example: 5#c31bffc137f44faf7efc4a84da827g7ca2cfeaa
-** muti-authors should be separated by ','. and the user is included in
-** example: 'LoeiFy, author0'
-**
-*/
+<html lang="zh-CN" class="loading">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+		<meta
+			name="viewport"
+			content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
+		/>
+		<title>Loading...</title>
+		<script>
+			/*
+			** if organization repository, set 'organization' to true
+			** blog config here
+			** token should be separated by '#'
+			** example: 5#c31bffc137f44faf7efc4a84da827g7ca2cfeaa
+			** muti-authors should be separated by ','. and the user is included in
+			** example: 'LoeiFy, author0'
+			**
+			*/
 
-window.config = <%= htmlWebpackPlugin.options.config %>
-</script>
-
-<script>
-var ua = window.navigator.userAgent
-if (ua.indexOf('MSIE') > -1 || ua.match(/Trident\/7\./)) {
-  var head = document.getElementsByTagName('head')[0]
-  var script = document.createElement('script')
-  script.type = 'text/javascript'
-  script.src = 'promise.js'
-  head.appendChild(script)
-}
-</script>
-
-<style>
-  .loading,
-  .error,
-  .transition {
-    height: 100%;
-  }
-  .loading body,
-  .error body,
-  .transition body {
-    height: 100%;
-  }
-  #loader {
-    text-align: center;
-    position: fixed;
-    z-index: 3;
-    left: 0;
-    top: 0;
-    height: 100%;
-    width: 100%;
-    opacity: 0;
-    visibility: hidden;
-    -webkit-transition: all .3s ease;
-    transition: all .3s ease;
-    background-color: rgba(255, 255, 255, .95);
-  }
-  .loading #loader {
-    opacity: 1;
-    visibility: visible;
-  }
-  .loading #loader div {
-    display: inline-block;
-    width: 50px;
-    height: 50px;
-    vertical-align: middle;
-    -webkit-border-radius: 3px;
-    border-radius: 3px;
-    background-color: #fff;
-    -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, .15);
-    box-shadow: 0 0 3px rgba(0, 0, 0, .15);
-  }
-  .loading #loader div:before {
-    content: '';
-    width: 26px;
-    height: 26px;
-    display: block;
-    margin: 8px auto 0;
-    -webkit-border-radius: 20px;
-    border-radius: 20px;
-    -webkit-animation: loading .5s linear forwards infinite;
-    animation: loading .5s linear forwards infinite;
-    border-top: 4px solid #0089fa;
-    border-right: 4px solid #ff002b;
-    border-bottom: 4px solid #ffa900;
-    border-left: 4px solid #00a753;
-  }
-  .loading #loader:after {
-    content: '';
-    display: inline-block;
-    height: 100%;
-    vertical-align: middle;
-  }
-  @keyframes loading { 100% { transform: rotate(360deg) } }
-  @-webkit-keyframes loading { 100% { -webkit-transform: rotate(360deg) } }
-</style>
-</head>
-<body>
-  <div class="page home">
-    <div id="user"></div>
-    <div id="posts"></div>
-  </div>
-  <div class="page single">
-    <div id="post"></div>
-    <div id="comments"></div>
-  </div>
-  <div id="loader"><div></div></div>
-</body>
+			window.config = <%= htmlWebpackPlugin.options.config %>
+		</script>
+		<script>
+			;(function() {
+				const ua = window.navigator.userAgent
+				if (ua.indexOf('MSIE') > -1 || ua.match(/Trident\/7\./)) {
+					var head = document.getElementsByTagName('head')[0]
+					var script = document.createElement('script')
+					script.type = 'text/javascript'
+					script.src = 'promise.js'
+					head.appendChild(script)
+				}
+			})()
+		</script>
+		<style>
+			.loading,
+			.error,
+			.transition {
+				height: 100%;
+			}
+			.loading body,
+			.error body,
+			.transition body {
+				height: 100%;
+			}
+			#loader {
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				text-align: center;
+				position: fixed;
+				z-index: 3;
+				left: 0;
+				top: 0;
+				height: 100%;
+				width: 100%;
+				opacity: 0;
+				visibility: hidden;
+				-webkit-transition: all 0.3s ease;
+				transition: all 0.3s ease;
+				background-color: rgba(255, 255, 255, 0.95);
+			}
+			.loading #loader {
+				opacity: 1;
+				visibility: visible;
+			}
+			@keyframes bouncing-loader {
+				to {
+					opacity: 0.1;
+					transform: translate3d(0, -1rem, 0);
+				}
+			}
+			.bouncing-loader {
+				display: flex;
+				justify-content: center;
+			}
+			.bouncing-loader > div {
+				width: 1rem;
+				height: 1rem;
+				margin: 3rem 0.2rem;
+				background: #6b76ff;
+				border-radius: 50%;
+				animation: bouncing-loader 0.6s infinite alternate;
+			}
+			.bouncing-loader > div:nth-child(2) {
+				animation-delay: 0.2s;
+			}
+			.bouncing-loader > div:nth-child(3) {
+				animation-delay: 0.4s;
+			}
+		</style>
+	</head>
+	<body>
+		<section class="page home">
+			<header id="user"></header>
+			<ul id="posts"></ul>
+		</section>
+		<section class="page single">
+			<article id="post"></article>
+			<ul id="comments"></ul>
+		</section>
+		<div id="loader">
+			<div class="bouncing-loader">
+				<div></div>
+				<div></div>
+				<div></div>
+			</div>
+		</div>
+	</body>
 </html>
