--- a/src/index.html
+++ b/src/index.html
@@ -80,8 +80,8 @@
 				width: 1rem;
 				height: 1rem;
 				margin: 3rem 0.2rem;
-				background: #6b76ff;
 				border-radius: 50%;
+				background: #485763;
 				animation: bouncing-loader 0.6s infinite alternate;
 			}
 			.bouncing-loader > div:nth-child(2) {
